# ML-DL-Lecture-Notes

./: ApacheSpark.md  Compress_Images.md  Dataset.md  DeepLearning.md  LSTM_Image_Analysis.md  Object_detection.md  Pandas.md  README.md  ReinforcementLearning.md  ResNets.md  TF2.0.md  TFRecord.md  data_augmentation.md  siamese_tf.md
CME323/: Lecture03_hightlight.md
CV/: CV_example01.py  camera.py
Dataset/: cifar100.py  data_augmentation_example01.py  dataset_example01.py  dataset_example02.py  download_cifar10.py  pandas_ex01.py  pandas_ex02.py  pandas_ex03.py
Dataset/cifar/: cifar_dataset.py
Dataset/download/: download.py
DeepLearning/: MIT_Driving_Scence_Segmentation.py  MobileNet.py  TFEstimate_Mnist_Advance.py  TFEstimate_Mnist_Basic.py  TFEstimate_cifar100_Basic.py  TFEstimator_WideResNet_ImageNet  TFEstimator_cifar10_bin.py  TFEstimator_cifar10_tfrecords.py  TFEstimator_imagenet.py  WideResNet50-2.py  cifar10_model.py  cifar10_train.py  create_tflite.py  example01.py  example02.py  example03.py  example04.py  example05.py  example06.py  example06_create_eval_graph.py  example07.py  example08.py  example09.py  example10.py  example11.py  example12.py  example13.py  example15.py  example_GAN_1D.py  example_tensorflow_serving.py  export_tflite_example06.py  freeze.py  inception_net.py  keras_wide_resnet.py  log_graph_from_ckpt_model.py  log_graph_from_pb_model.py  mnist_batch_norm.py  mnist_model.py  optimize.py  temp.py  (+7 more)
DeepLearning/DN_network/: classsification10_nn.py
DeepLearning/DN_network/log/: events.out.tfevents.1564934275.dat-800G5H-800G5S
DeepLearning/ResNets/: ResNet.py
DeepLearning/ipython/: Basic_TF_Estimator.ipynb  CNN_and_Tensorflow.ipynb  CNN_and_Tensorflow.slides.html
DeepLearning/log/test/: events.out.tfevents.1566395670.dat-800G5H-800G5S
DeepLearning/log/test_epoch/: events.out.tfevents.1566395670.dat-800G5H-800G5S
DeepLearning/log/train_epoch/: events.out.tfevents.1566395670.dat-800G5H-800G5S
DeepLearning/remove/: remove.py
DeepLearning/tmp/: example06.py  example16.py
ImageProcessing/: ImageProcessing.md  l_openCV3.md  l_openCV3_ex01.py  l_openCV3_ex02.py  l_openCV3_ex03.py  l_openCV3_ex04.py  l_openCV3_ex5.py
Mathematics/: Mathematics.md  NumpyArray.py  c_cpp_properties.json  cmake-kits.json  launch.json  settings.json  tasks.json
TF20/: TF20_ex01.py  TF20_ex02.py  TF20_ex03.py  TF20_ex04.py  TF20_ex05.py  TF20_ex06.py  TF20_ex07.py  TF20_mnist.py  TF2X_reproducible_results.py
TFRecord/: TFRecord_example02.py  cifa10_TFRecord.py
documents/: pose_estimation_collection.md
installation_DNN/: CMakeLists.txt  Change GPU device ways for each framework.txt  Docker essential commands  Installation of DL frameworks for PRDCV369.txt  Setup Mxnet on ubuntu 16.04 CUda 10.txt  c_cpp_properties.json  docker tutorial.txt  gtest.md  install_TRT.txt  install_cuda.txt  install_dependencies.sh  install_torch.md  opencv.sh  opencv.sh.save  opencv.txt  setting_vscode_trt.md  tensorboard_remote_server.txt
pytorch/: QAT.py  QAT_utils.py  pytorch_ex01.py  pytorch_ex02.py  pytorch_ex03.py
siamese_tf/: Omniglost_data_create.py  Omniglot_dataset.py  Omniglot_loader.py  siamese_mnist.py  siamese_model.py  siamese_train.py  triplet_mnist.py
